# leetcode-and-others

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.zed/: settings.json
leetcode-easy/: 1-two-sum.py  1.py  119.py  121.py  13.py  136.py  14.py  14_longest_common_prefix.py  1512.py  169.py  1876-substrings-of-size-three-with-distinct-characters.py  1876.py  1876_substrings_of_size_three_with_distinct_characters.py  1_two_sum.py  20-valid-parentheses.py  20.py  202.py  205.py  206-reverse-linked-list.py  206.py  206_reverse_linked_list.py  21-merge-two-sorted-lists.py  21.py  217-contains-duplicate.py  217.py  21_merge_two_sorted_lists.py  226-invert-binary-tree.py  226.py  2529.py  26.py  268.py  27.py  28.py  35.py  35_search_insert_position.py  374.py  448.py  53-maximum-subarray.py  53_maximum_subarray.py  58.py  (+5 more)
leetcode-hard/: 23-merge-n-sorted-lists.py  23.py  23_merge_n_sorted_lists.py  4.py  76-minimum-window-substring.py  76_minimum_window_substring.py
leetcode-medium/: 1004-max-consecutive-ones-III.py  1004.py  1004_max_consecutive_ones_III.py  11.py  122.py  1472-design-browser-history.py  15.py  153.py  167-two-sum-2.py  167.py  17.py  1828.py  1845.py  19-remove-nth-node.py  19.py  1910.py  19_remove_nth_node.py  2.py  22.py  229.py  22_generate_parentheses.py  238.py  3-longest-substring-without-repeating-characters.py  3.py  34.py  343.py  3_longest_substring_without_repeating_characters.py  438-find-all-anagrams.py  438.py  438_find_all_anagrams.py  442-find-duplicates.py  442.py  442_find_duplicates.py  46.py  48.py  49.py  5.py  (+18 more)
(+43 files in other folders)
